@@ -1,4 +1,4 @@
-FROM eclipse-temurin:17-jre-jammy
+FROM eclipse-temurin:21-jre-jammy
 
 WORKDIR /sonovel
 
@@ -6,4 +6,9 @@ COPY app.jar /sonovel/
 COPY config.ini /sonovel/
 COPY rules /sonovel/rules
 
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Dfile.encoding=UTF-8 -Duser.timezone=GMT+08 -jar app.jar"]
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS \
+  -XX:+UseZGC \
+  -XX:+ZGenerational \
+  -Dfile.encoding=UTF-8 \
+  -Duser.timezone=GMT+08 \
+  -jar app.jar"]
